# DevBoard

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CONVERSATION_EVALUATOR.md  IMPLEMENTATION_PLAN.md  ORIGINAL_DOCUMENT.md  PROJECT_SPECIFICATION.md  README.md  TODO.md  docker-compose.yml  setup.sh  start.sh
backend/: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  example_gemini_usage.py  pyproject.toml
backend/codex_sdk/: __init__.py  codex.py  exec.py  schema.py  thread.py  types.py
backend/codex_sdk/asyncio/: __init__.py  codex.py  exec.py  thread.py
backend/devboard/: __init__.py  main.py
backend/devboard/agents/: __init__.py  agent_config_assembly.py  agent_config_service.py  agent_engines.py  agent_execution.py  background_execution.py  base_agent.py  base_agent_conversation.py  claude_code_agent.py  config_types.py  conversation_history.py  deps.py  evaluation_models.py  events.py  exceptions.py  execution_manager.py  gemini_cli.py  language_models.py  llm_service.py  project_agent.py  prompt_actions.py  prompts.py  role_types.py  system_message_tags.py  task_agent.py  task_planning_agent.py  title_generator.py  tools.py  types.py
backend/devboard/api/: main.py  streaming.py
backend/devboard/config/: agent_config.py  agent_engine_configs.py  base.py  llm_config.py  (+4 more)
backend/tests/: conftest.py  test_agent_conversation_service.py  test_base_agent.py  test_codebases_router.py  test_config_service.py  test_configurations_router.py  test_context_assembly.py  test_context_providers.py  test_conversation_evaluator.py  test_conversation_models.py  test_document_editor.py  test_gemini_cli.py  test_integration_service.py  test_projects_router.py  test_qa_routers.py  test_repositories.py  test_resource_sharing.py  test_settings_router.py  test_task_conversation_service.py  test_task_planning_agent.py  test_tasks_router.py  test_template_service.py
(+959 files in other folders)
