[project]
name = "devboard"
version = "0.1.0"
description = "DevBoard - AI-powered developer command centre"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.118.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.16.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "jira>=3.5.0",
    "PyGithub>=1.59.0",
    "slack-sdk>=3.27.0",
    "pydantic-ai>=1.1.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "logfire[fastapi,httpx,sqlalchemy]>=0.60.0",
    "python-dotenv>=1.0.0",
    "claude-agent-sdk>=0.1.20",
    "mcp>=1.25.0",
    "fastmcp>=2.14.3",

]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.8",
    "pyright>=1.1.338",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "pre-commit>=3.5.0",
]

[tool.uv]
index-url = "https://pypi.org/simple/"

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
exclude = [
    "devboard/db/migrations/",
]
python_version = "3.12"

[tool.pyright]
include = ["devboard"]
exclude = ["**/node_modules", "**/__pycache__", "**/.*"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
